<resources>
    <string name="app_name">Find the same ones</string>
    <string name="title_menu">Menu</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="coins_rewards_image">Coins rewards image</string>
    <string name="app_logo">app logo</string>
    <string name="play">Play</string>
    <string name="safe_button">Safe button</string>
    <string name="game_logo_1">Game Logo #1</string>
    <string name="safe_btn_message">Now it safe</string>
    <string name="timer_icon">Timer icon</string>
    <string name="rule_text">Keep matching up two of the same object until there are no more to be paired and you clear the board.</string>
    <string name="timer_tip_text">less time, more rewards</string>
    <string name="win_image">Win image</string>
    <string name="congratulation">Congratulation</string>
    <string name="congratulations_text">Great! You won!</string>
    <string name="double_reward_btn_text">Double reward</string>
    <string name="button_go_home">Button go home</string>
</resources>