<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".presentation.ui.end_game.EndGameFragment">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/win_image"
        android:src="@drawable/ci_17_chest_big" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/congratulation"
        android:textAllCaps="true"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/congratulations_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/grey_500"
        app:cardElevation="0dp"
        app:cardCornerRadius="32dp">

        <include
            android:id="@+id/reward_view"
            layout="@layout/view_coins_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/double_reward"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/double_reward_btn_text"
            android:textAllCaps="true"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
            tools:targetApi="p" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_home"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/button_go_home"
            app:icon="@drawable/baseline_home_24"
            app:iconSize="46dp" />

    </LinearLayout>

</LinearLayout>