<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".presentation.ui.main_menu.MainMenuFragment">

    <include
        android:id="@+id/coins_view"
        layout="@layout/view_coins_reward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end" />


    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/grey"
        app:cardCornerRadius="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/game_logo_1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_play"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:text="@string/play"
        android:textAllCaps="true"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
        tools:targetApi="p" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_safe"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/safe_button"
        app:icon="@drawable/shield_icon"
        app:iconSize="46dp" />
</FrameLayout>