<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/main_menu">

    <fragment
        android:id="@+id/main_menu"
        android:name="com.semenchuk.junior.test.work.findthesameones.presentation.ui.main_menu.MainMenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_main_menu">
        <action
            android:id="@+id/action_main_menu_to_game_scene"
            app:destination="@id/game_scene"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/game_scene"
        android:name="com.semenchuk.junior.test.work.findthesameones.presentation.ui.game_scene.GameSceneFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_game_scene">
        <action
            android:id="@+id/action_game_scene_to_end_game"
            app:destination="@id/end_game"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/main_menu"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/end_game"
        android:name="com.semenchuk.junior.test.work.findthesameones.presentation.ui.end_game.EndGameFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_end_game">
        <argument
            android:name="coins"
            app:argType="integer" />
        <action
            android:id="@+id/action_end_game_to_main_menu"
            app:destination="@id/main_menu"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/main_menu"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>